Add transactions, transfers, kafka
