# docs/swagger.yaml
@@ -36,6 +36,17 @@ definitions:
     - currency
     - type
     type: object
+  entities.DepositRequest:
+    description: Запрос для пополнения счёта пользователя на определённую сумму.
+    properties:
+      account_id:
+        type: integer
+      amount:
+        type: number
+    required:
+    - account_id
+    - amount
+    type: object
   entities.ErrorResponse:
     description: ErrorResponse structure
     properties:
@@ -91,6 +102,52 @@ definitions:
     - password
     - username
     type: object
+  entities.Transaction:
+    description: Transaction is a record of a financial transaction between accounts.
+    properties:
+      amount:
+        type: number
+      created_at:
+        type: string
+      description:
+        type: string
+      from_account_id:
+        type: integer
+      id:
+        type: integer
+      to_account_id:
+        type: integer
+      type:
+        $ref: '#/definitions/entities.TransferType'
+      user_id:
+        type: integer
+    type: object
+  entities.TransferRequest:
+    description: TransferRequest is used to initiate a transfer between two accounts.
+    properties:
+      amount:
+        type: number
+      description:
+        type: string
+      from_account_id:
+        type: integer
+      to_account_id:
+        type: integer
+      type:
+        $ref: '#/definitions/entities.TransferType'
+      user_id:
+        type: integer
+    type: object
+  entities.TransferType:
+    enum:
+    - internal
+    - external
+    - deposit
+    type: string
+    x-enum-varnames:
+    - InternalTransfer
+    - ExternalTransfer
+    - Deposit
   entities.UpdateUserRequest:
     description: Update user model
     properties:
@@ -250,6 +307,182 @@ paths:
       summary: Close a user account
       tags:
       - accounts
+  /auth/accounts/deposit:
+    post:
+      consumes:
+      - application/json
+      description: Adds money to the user's account
+      parameters:
+      - description: Deposit data
+        in: body
+        name: deposit
+        required: true
+        schema:
+          $ref: '#/definitions/entities.DepositRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.AccountResponse'
+        "400":
+          description: Invalid input or account
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Deposit to an account
+      tags:
+      - accounts
+  /auth/transactions:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of transactions for a user, with optional filters for
+        pagination, date range, type, and amount
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Limit number of transactions
+        in: query
+        name: limit
+        type: integer
+      - description: From date (YYYY-MM-DD)
+        in: query
+        name: fromDate
+        type: string
+      - description: To date (YYYY-MM-DD)
+        in: query
+        name: toDate
+        type: string
+      - description: Transaction type
+        in: query
+        name: type
+        type: string
+      - description: Minimum amount
+        in: query
+        name: minAmount
+        type: number
+      - description: Maximum amount
+        in: query
+        name: maxAmount
+        type: number
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of transactions
+          schema:
+            items:
+              $ref: '#/definitions/entities.Transaction'
+            type: array
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+      summary: Get a list of transactions
+      tags:
+      - Transactions
+  /auth/transactions/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get transaction details by ID
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Transaction details
+          schema:
+            $ref: '#/definitions/entities.Transaction'
+        "400":
+          description: Invalid transaction ID
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+        "404":
+          description: Transaction not found
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+      summary: Get a transaction by ID
+      tags:
+      - Transactions
+  /auth/transfers/external:
+    post:
+      consumes:
+      - application/json
+      description: Process an external transfer between accounts
+      parameters:
+      - description: Transfer request
+        in: body
+        name: transfer
+        required: true
+        schema:
+          $ref: '#/definitions/entities.TransferRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Transaction details
+          schema:
+            $ref: '#/definitions/entities.Transaction'
+        "400":
+          description: Error processing transfer
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+      summary: External transfer
+      tags:
+      - Transactions
+  /auth/transfers/internal:
+    post:
+      consumes:
+      - application/json
+      description: Process an internal transfer between accounts
+      parameters:
+      - description: Transfer request
+        in: body
+        name: transfer
+        required: true
+        schema:
+          $ref: '#/definitions/entities.TransferRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Transaction details
+          schema:
+            $ref: '#/definitions/entities.Transaction'
+        "400":
+          description: Error processing transfer
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+      summary: Internal transfer
+      tags:
+      - Transactions
   /login:
     post:
       consumes:
